--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>TDN</title>
-		<link rel = "stylesheet" href = "CSS\style.css">
+		<link rel = "stylesheet" href = "CSS/style.css">
 	</head>
 	<body>
 		<p id = "first">This is a paragraph</p>
