--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>TDN</title>
+		<title>School of tree</title>
 		<link rel = "stylesheet" href = "CSS/style.css">
 	</head>
 	<body>
-		<p id = "first">This is a paragraph</p>
+		<h1>SCHOOLS OF TREES</h1>
+		<div id = "first">
+			<h1>Truong hoc co cac cay</h1>
+		</div>
 	</body>
 </html>
