--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel = "stylesheet" href = "CSS/style.css">
 	</head>
 	<body>
-		<h1>SCHOOLS OF TREES</h1>
+		<h1 id = "firstHeading">SCHOOLS OF TREES</h1>
 		<div id = "first">
 			<h1>Truong hoc co cac cay</h1>
 		</div>
