--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 	<head>
 		<title>School of tree</title>
-		<link rel = "stylesheet" href = "CSS/style.css">
+		<link rel = "stylesheet" href = "biology.css">
 	</head>
 	<body>
 		<h1 id = "firstHeading">SCHOOLS OF TREES</h1>
 		<section class = "main">
 			<div id = "first">
 				<div id = "firstPic">
-					<img src = "picture/bootstrap.png" width = "80px" height = "80px"/>
+					<img src = "D:\Khoi 2\HINH ANH VA VIDEO\iPhone destop theme\ingredient\icon\bootstrap.png" width = "80px" height = "80px"/>
 				</div>
 				<div class = "text">
 					<p class = "link">
