--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<section class = "main">
 			<div id = "first">
 				<div id = "firstPic">
-					<img src = "Picture/bootstrap.png" width = "80px" height = "80px"/>
+					<img src = "picture/bootstrap.png" width = "80px" height = "80px"/>
 				</div>
 				<div class = "text">
 					<p class = "link">
